# adlc

./: .gitignore  ADLC_COMPOUND_ENGINEERING_WORKFLOW_INTEGRATION_GOAL_PROMPT.md  ADLC_GOAL_4_TICKET_STATE_SYNCHRONIZATION_GOAL_PROMPT.md  ADLC_GOAL_5_WORKTREE_QUEUE_SUBSTRATE_GOAL_PROMPT.md  ADLC_GOAL_6_EXECUTABLE_TOOL_NODES_GOAL_PROMPT.md  ADLC_GOAL_8_LEARNING_ARCHITECTURE_MEMORY_GOAL_PROMPT.md  ADLC_GRAPH_RESEARCH_E2E_GOAL_PROMPT.md  ADLC_LOOP_BUDGET_GUARD_INTEGRATION_GOAL_PROMPT.md  ADLC_LOOP_SYSTEM_MATURITY_PRODUCTIONIZATION_GOAL_PROMPT.md  ADLC_TECH_DEBT_CLEARING_GOAL_PROMPT.md  CONTRIBUTING.md  LICENSE  README.md  TECH_DEBT_AUDIT.md  WORKFLOW.dot  WORKFLOW.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
agents/: ADLC-BUILD-BRIEF-AGENT.md  PM-PRD-AGENT.md  code-reviewer.md  coder.md  fixer.md  plan-reviewer.md  planner.md  pr-preparer.md  researcher.md  security-reviewer.md  test-author.md  test-strength-auditor.md  triage.md
docs/: COMPATIBILITY_ANALYSIS.md  INFRASTRUCTURE_PRIMITIVES_AUDIT.md  INFRASTRUCTURE_ROADMAP.md  adlc-v2-specification.md  adlc-v2-tickets.md
docs/archive/: ADLC-BUILD-BRIEF-AGENT.md  PM-PRD-AGENT.md
docs/build-briefs/: agent-native-cli-mcp-wrapper.md  compound-engineering-adlc-implementation.json  compound-engineering-workflow-integration.json  kitchen-loop-coverage-admission.json  (+7 more)
examples/: README.md  example-prd.md
platform/: AGENTS.md  CLAUDE.md  agents-antigravity.md
scripts/: adlc.py  md2pdf.py  validate_learning_entry.py
skills/: manifest.json
tests/: test_adlc_cli.sh  test_adlc_contracts.sh  test_setup.sh
(+261 files in other folders)
