[project]
name = "adlc"
version = "0.1.0"
description = "Agentic Development Lifecycle contracts, schemas, runtime adapters, and deterministic validators."
requires-python = ">=3.9"
dependencies = [
  "jsonschema>=4.0,<5.0"
]

[project.optional-dependencies]
pdf = [
  "PyMuPDF>=1.24,<2.0"
]
audit = [
  "pip-audit>=2.7",
  "radon>=6",
  "ruff>=0.5",
  "vulture>=2.11",
  "mypy>=1.10"
]

[tool.ruff]
line-length = 120
target-version = "py39"
